test/corpus/expressions.txt
==================
operator precedence and calls
==================
DB 1 + 2 * 3, HIGH($1234), -x ** 2, (a | b) << 1
---

(source_file
  (statement (data_directive
    (argument_list
      (binary_expression
        left: (decimal)
        right: (binary_expression left: (decimal) right: (decimal)))
      (call_expression function: (identifier) (argument_list (hex)))
      (exp_expression (unary_expression (identifier)) (decimal))
      (binary_expression
        left: (parenthesized_expression (binary_expression left: (identifier) right: (identifier)))
        right: (decimal))))))
