test/corpus/labels.txt
==================
global, exported, local, scoped labels
==================
Global:
Exported::
.local
.local_with_colon:
Parent.child:
---

(source_file
  (statement (label_definition name: (identifier)))
  (statement (label_definition name: (identifier)))
  (statement (label_definition name: (local_label)))
  (statement (label_definition name: (local_label)))
  (statement (label_definition name: (identifier))))

==================
keyword-prefix label parses as label not keyword
==================
ENDM_LOOP:
    nop
---

(source_file
  (statement (label_definition name: (identifier)))
  (statement (instruction_line (instruction mnemonic: (mnemonic)))))

==================
anonymous labels
==================
:
    jr :+
    jr :-
:
    jp :++
---

(source_file
  (statement (label_definition (anonymous_label)))
  (statement (instruction_line (instruction (branch_mnemonic) (anonymous_label_ref))))
  (statement (instruction_line (instruction (branch_mnemonic) (anonymous_label_ref))))
  (statement (label_definition (anonymous_label)))
  (statement (instruction_line (instruction (branch_mnemonic) (anonymous_label_ref)))))

==================
interpolated label definitions
==================
Color{i}:
    nop
{name}::
    nop
---

(source_file
  (statement (label_definition
    name: (interpolated_identifier (identifier) (interpolation))))
  (statement (instruction_line (instruction mnemonic: (mnemonic))))
  (statement (label_definition name: (interpolation)))
  (statement (instruction_line (instruction mnemonic: (mnemonic)))))
